<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#00FFFFFF"
    tools:context=".AttendeeEventListFragment"
    android:id="@+id/fragment_attendee_event_list">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/allEventsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingStart="30dp"
        android:paddingTop="10dp"
        android:paddingEnd="30dp"
        android:paddingBottom="10dp"
        android:layout_margin="10dp"
        android:text="@string/all_events_button"
        android:textAllCaps="false"
        android:textColor="@color/button_text_color"
        app:layout_constraintBottom_toTopOf="@+id/allEventsList"
        app:layout_constraintEnd_toStartOf="@+id/myEventsButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/myEventsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/button_background"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingStart="30dp"
        android:paddingTop="10dp"
        android:paddingEnd="30dp"
        android:paddingBottom="10dp"
        android:text="@string/my_events_button"
        android:textAllCaps="false"
        android:textColor="@color/button_text_color"
        app:layout_constraintBottom_toTopOf="@+id/allEventsList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/allEventsButton" />

    <TextView
        android:id="@+id/attendeeEventsNoEvents"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/there_s_no_events_here"
        android:textAlignment="center"
        android:textSize="28sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/allEventsList" />

    <TextView
        android:id="@+id/attendeeEventsNoResults"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/no_results_found"
        android:textAlignment="center"
        android:textSize="28sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/allEventsList" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@+id/myEventsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:hint="@string/event_search_hint"
            android:textSize="16sp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/search_24px"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <ListView
        android:id="@+id/allEventsList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allEventsButton">

    </ListView>

    <ListView
        android:id="@+id/userEventsList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/allEventsList"
        tools:visibility="invisible" />

    <ListView
        android:id="@+id/searchEventsList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/allEventsList"
        tools:visibility="invisible"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
