<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AttendeeProfileFragment"
    android:id="@+id/fragment_attendee_profile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/editAttendeeProfileLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".AttendeeProfileFragment">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/add_photo_draw_background"
            android:foreground="@drawable/add_photo_draw_foreground"

            app:layout_constraintBottom_toBottomOf="@+id/image_view"
            app:layout_constraintEnd_toEndOf="@+id/image_view" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/delete_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="@drawable/delete_photo_draw_foreground"
            app:backgroundTint="@color/delete_photo_draw_background"

            app:layout_constraintEnd_toEndOf="@+id/image_view"
            app:layout_constraintTop_toTopOf="@+id/image_view" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:background="@color/profile_photo_background"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/circle"
            app:strokeColor="@android:color/darker_gray"
            app:strokeWidth="5dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_attendee_first_name_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/hint_color"
            android:minEms="15"
            android:maxEms="15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_attendee_first_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/first_name"
                android:inputType="text"
                android:maxLength="100"
                 />
        </com.google.android.material.textfield.TextInputLayout>





        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_attendee_last_name_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/hint_color"
            android:minEms="15"
            android:maxEms="15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_attendee_first_name_layout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_attendee_last_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/last_name"
                android:inputType="text"
                android:maxLength="100"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_attendee_email_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/hint_color"
            android:minEms="15"
            android:maxEms="15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_attendee_home_page_layout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_attendee_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="text"
                android:maxLength="100"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_attendee_home_page_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:minEms="15"
            android:maxEms="15"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_attendee_last_name_layout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_attendee_home_page"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/home_page"
                android:inputType="text"
                android:maxLength="100"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/edit_attendee_location_box"
            android:layout_width="248dp"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:text="@string/access_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_attendee_email_layout" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/attendee_info_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_background"
            android:text="@android:string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/button_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/attendee_info_save_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_attendee_location_box"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/attendee_info_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_background"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/button_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/attendee_info_cancel_button"
            app:layout_constraintTop_toBottomOf="@+id/edit_attendee_location_box"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>